[package]
name = "rust-pop3-client"
version = "0.2.0"
description = "POP3 client based on rustls"
license = "MPL-2.0"
homepage = "https://github.com/falk-werner/rust-pop3-client"
repository = "https://github.com/falk-werner/rust-pop3-client"
readme = "README.md"
keywords = ["pop3", "email"]
categories = ["network-programming"]

edition = "2021"

[dependencies]
rustls-native-certs = "0.6"
rustls = "0.20"

[dev-dependencies]
rpassword = "0.0.4"
